feat(dmx): runnable example + http URL helpers; wire deps and formatting
* example/: add `DMXPage.elm` minimal `Browser.element` that
  fetches `/core/topic/830082?children=true&assocChildren=true`,
  decodes via `Feature.DMX.Decoders.topicDecoder`, and renders
  topicmap name + timestamps.

* Http: extend `Feature.DMX.Http`
  * add `topicUrl` and `topicDeepUrl`
  * remove unsupported `withCredentials` field from `Config` and requests
  * keep `timeout = Nothing` (type `Maybe Float`)

* elm.json:
  * include `"tests"` and `"example"` in `"source-directories"`
  * add dependency `elm/http` (2.0.0); update indirects accordingly

* package.json: include `example` directory in `format` / `format:check` scripts
* tests/resources/: move example JSON fixtures from `examples/` to `tests/resources/` for clarity

Notes:

* Cross-origin cookies are not supported by Elm `Http`; use same-origin or a ports+`fetch` bridge if needed.

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "dev": "elm-live src/Main.elm --dir=public --open --debug -- --output=public/elm.js",
     "build": "sh build-prod.sh",
     "build:dev": "elm make src/Main.elm --optimize --output=public/elm.js",
-    "format": "npx elm-format --yes src tests review",
-    "format:check": "npx elm-format --validate src tests review",
+    "format": "npx elm-format --yes src tests review example",
+    "format:check": "npx elm-format --validate src tests review example",
     "test": "elm-test",
     "test:ci": "elm-format --validate src && elm-review && elm-test",
     "review": "elm-review",
