chore(dev-server): add local proxy for DMX
at [http://localhost:5173/](http://localhost:5173/)

* introduce `example/server.mjs` (Express + http-proxy-middleware)
  * serves `example/index.html` + `main.js`
  * proxies `/core`, `/topicmaps`, `/search` to a remote DMX server
  * optional auth via `DMX_JSESSIONID` env (attaches cookie to upstream requests)
  * handles `OPTIONS` locally to avoid path-to-regexp issues

* adjust `DMXPage.elm` example to use `Config.base = ""` for relative URLs
  so all HTTP calls go through the local proxy

* document run flow:

  ```bash
  elm make example/DMXPage.elm --output=example/main.js
  export DMX_JSESSIONID='<copy from DMX browser session>'
  node example/server.mjs
  open http://localhost:5173/
  ```

Enables testing Elm against DMX v5.3.5 without CORS errors.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "elm-live": "^4.0.2",
     "elm-review": "^2.13.4",
     "elm-test": "^0.19.1-revision16",
+    "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "uglify-js": "^3.19.3"
-  }
+  },
+  "type": "module"
 }
