feat(build): switch dev/prod to AppMain Browser.document and
fix bad-flags

* dev now runs AppMain as Browser.document with
  tolerant flags (Json.Value), avoiding “bad flags” errors
* standardize bundle name to public/main.js and
  load via <script src="main.js"> in both dev and prod templates
* update package.json:
  dev uses elm-live src/AppMain.elm with --pushstate
* change build-prod.sh to compile src/AppMain.elm --optimize, then
  minify and inline into template
* simplify index.html and public/index.html to
  call Elm.AppMain.init({ flags: {} }) and
  keep window\.app for injected tools
* no changes to AppEmbed flow; remains manual for fedwiki embedding

Concept for upstream local-first Browser.document build:

* Keep two entry points:
  * AppMain (Browser.document) for the local-first browser app
  * AppEmbed (Browser.element) for fedwiki frames

* Flags and init:

  * AppMain accepts Json.Value flags and attempts decoders in order:

    1. full saved model (localStorage)
    2. { slug, stored } shape
    3. fallback to cold boot from {}

* Persistence:

  * Elm exposes port store : E.Value -> Cmd msg that
    sends the encoded model on relevant updates
  * JS subscribes to app.ports.store, debounces, and
    writes to localStorage under a versioned key (e.g. dm6-elm/v1)
  * On page load, JS reads the key, parses JSON, and
    passes it as flags to Elm.AppMain.init

* Dev:

  * npm run dev serves public/index.html, compiles to public/main.js,
    and initializes Elm.AppMain with {}
  * Optional: add a small helper script in public/ to export/import
    localStorage for debugging

* Prod:

  * build-prod.sh compiles AppMain, minifies, and inlines into
    index.html to produce public/dm6-elm.html
  * Script swaps in Log.Prod (no Debug), and optionally subscribes to
    a log port via window\.app if present

* Embed automation (optional):

  * Add a separate npm script, e.g. "build:embed":
    "elm make src/AppEmbed.elm --optimize --output=path/to/elm.js"
  * 

--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
   },
   "homepage": "https://github.com/dmx-systems/dm6-elm#readme",
   "scripts": {
-    "dev": "elm-live src/Main.elm --dir=public --open --debug -- --output=public/elm.js",
+    "dev": "elm-live src/AppMain.elm --dir=public --pushstate --open --debug -- --output=public/main.js",
     "build": "sh build-prod.sh",
-    "build:dev": "elm make src/Main.elm --optimize --output=public/elm.js",
     "format": "npx elm-format --yes src tests review",
     "format:check": "npx elm-format --validate src tests review",
     "test": "elm-test",
